<resources>
    <string name="app_name">PlayyArt</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="popular">Popular</string>
    <string name="download_points">Download Points</string>
    <string name="watch">Watch</string>
    <string name="collect">Collect</string>
    <string name="profile">Profile</string>
    <string name="auto_change_wallpaper">Auto Change Wallpaper</string>
    <string name="about">About</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_it">Share It</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="or">Or</string>
    <string name="create_account">Create Account</string>
    <string name="collected_art_points">Collected ART Points</string>
    <string name="art_points">ART Points</string>
    <!--<string name="interstitial_unit_id">ca-app-pub-1967586107018237/9546087538</string>
    <string name="interstitial_video_unit_id">ca-app-pub-1967586107018237/4335409258</string>
    <string name="video_unit_id">ca-app-pub-1967586107018237/6771750387</string>
    <string name="native_unit_id">ca-app-pub-1967586107018237/1519423700</string>
    <string name="banner_unit_id">ca-app-pub-1967586107018237/4868475921</string>-->
    <string name="interstitial_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_video_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="video_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="native_unit_id">ca-app-pub-3940256099942544/8135179316</string>
    <string name="banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="video">Video</string>
    <string name="unlock_nby">Unlock By</string>
    <string name="art_30">ART (30)</string>
    <string name="change_wallpaper_notification">Change Wallpaper (Notification)</string>
    <string name="creativity_takes_courage_but_you_join_for_free">Creativity takes courage,\nBut you join for free.</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="share_post_message">Hey, I just found a great wallpaper for you from the PlayyArt App.\n\nPlayyArt\n</string>
    <string name="share_comic_message">Hey, I just found a great comic for you from the PlayyArt App.\n\nPlayyArt\n</string>
    <string name="share_video_message">Hey, I just found a amazing video for you from the PlayyArt App.\n\nPlayyArt\n</string>
    <string name="share_app_message">Hey, I just found some great art pieces for you from the PlayyArt App.\n\nPlayyArt\n</string>
    <string name="inart_community">PlayyArt</string>
    <string name="sign_in">Sign In</string>
    <string name="in_art_logo">Playy Art Logo</string>
    <string name="get_back_to_the_inart_community">Get back to the PlayyArt community</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="weekly_2_hr_100">Weekly 2 Hr (+100)</string>
    <string name="daily_10_min_20">Daily 10 Min (+20)</string>
    <string name="get_art_for_using_inart">Get ART for using PlayyArt</string>
    <string name="watch_video_30">Watch Video (+30)</string>
    <string name="play">Play</string>
    <string name="watch_ad_5">Watch Ad (+5)</string>
    <string name="get_art_by_ads">Get ART by Ads</string>
    <string name="daily_login_reward">Daily Login Reward</string>
    <string name="_200">+200</string>
    <string name="_170">+170</string>
    <string name="_120">+120</string>
    <string name="_100">+100</string>
    <string name="_80">+80</string>
    <string name="positive_20">+20</string>
    <string name="negative_20">-20</string>
    <string name="_40">+40</string>
    <string name="_60">+60</string>
    <string name="vote">Vote</string>
    <string name="vs">VS</string>
    <string name="now">Now</string>
    <string name="please_wait">Setting your wallpaper..</string>
    <string name="update_the_application_to_view_this_post">Update the application to view this post.</string>
    <string name="post_unavailable">Post Unavailable</string>

    <string name="privacy_policy_text">TwoGentle built the PlayyArt app as a Freemium app. This SERVICE is provided by TwoGentle at no cost and is intended for use as is.\n\nThis page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.\n\nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at PlayyArt unless otherwise defined in this Privacy Policy.\n\nInformation Collection and Use\n\nFor a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.\n\nThe app does use third party services that may collect information used to identify you.\n\nLink to privacy policy of third party service providers used by the app\n\n• Google Play Services\n• AdMob\n• Google Analytics for Firebase\n• Log Data\n\nI want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.\n\nService Providers\n\nI may employ third-party companies and individuals due to the following reasons:\n\n• To facilitate our Service.\n• To provide the Service on our behalf.\n• To perform Service-related services.\n• To assist us in analyzing how our Service is used.\nI want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.\n\nSecurity\n\nI value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.\n\nLinks to Other Sites\n\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n\nChildren’s Privacy\n\nThese Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.\n\nChanges to This Privacy Policy\n\nI may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.\n\nThis policy is effective as of 2020-08-01\n\nContact Us\n\nIf you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at twogentleofficial@gmail.com\n</string>
    <string name="copyright_text">© 2020 TwoGentle</string>
    <string name="liked_empty_text">Heart is empty!\nExplore and fill it up.</string>
    <string name="saved_empty_text">Empty!\nCreate a beautiful collection by saving some Art.</string>
    <string name="wall_empty_text">Stay Tuned!\nThis category will be filled very soon.</string>
    <string name="video_is_being_loaded">Video is being loaded!</string>
    <string name="_100_art">100 ART</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_by_same_line">Unlock By</string>
    <string name="inart_instagram">PlayyArt Instagram</string>
    <string name="inart_instagram_url">https://www.instagram.com/playyart</string>
    <string name="video_playback_error">Error playing video</string>
    <string name="playy">Playy</string>
    <string name="collections">Collections</string>
    <string name="art_points_shop">ART Points Shop</string>
    <string name="_500">500</string>
    <string name="_1000">1000</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="join_the_best_art_community">Join the best art community</string>
    <string name="tap_to_read_the_whole_comic">Tap to read the whole comic</string>
    <string name="choose_collections_you_like">Choose your favorite collections</string>
    <string name="done">DONE</string>
    <string name="favourite_collections">Favourite Collections</string>
    <string name="ad_in">\"Ad in \"</string>
    <string name="skip_ad">Skip Ad</string>
    <string name="more">More</string>
    <string name="shop">Shop</string>
    <string name="by_twogentle">By TwoGentle</string>
</resources>