<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/contactUsBackImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_square"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_left_24_filled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/contactUsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="2dp"
        android:text="@string/contact_us"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/contactUsBackImageView"
        app:layout_constraintStart_toEndOf="@id/contactUsBackImageView"
        app:layout_constraintTop_toTopOf="@id/contactUsBackImageView" />

    <include
        android:id="@+id/contactUsName"
        layout="@layout/list_item_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/contactUsBackImageView" />

    <include
        android:id="@+id/contactUsEmail"
        layout="@layout/list_item_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/contactUsName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contactUsMessageInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactUsEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contactUsMessageEditText"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/contactUsSubmitCard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="32dp"
        android:animateLayoutChanges="true"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactUsMessageInputLayout">

        <TextView
            android:id="@+id/contactUsSubmitTextVie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>